# AykAgent

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  test_tool_memory.py
Aykagent/memory/: MEMORY.md  user_birthday.md
agent/: Agent.py  model.py  prompt.py
config/: settings.py
harness.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
memory/: checkpointer.py  memory_manager.py  short_memory_manager.py
prompts/: prompt.py
skills/: __init__.py  loader.py
skills/code-review/: SKILL.md
skills/feng-ge/: SKILL.md
tools/: register.py
tools/builtins/: edit_file.py  memory_tools.py  read_file.py  run_bash.py  task.py  web_search.py  write_file.py
tools/local/: read_file.py  write_file.py
tools/mcp/: github_tools.py
tools/origin/: get_weather.py
utils/: safe_file.py  text.py  thread_id.py
